test: add task completion with large variable form e2e test